📚 Auto-update: News data refreshed - 2026-01-06 21:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43134,5 +43134,117 @@
         "published": "Tue, 06 Jan 2026 18:19:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46516267\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/mobileye-acquires-humanoid-robot-startup-mentee-robotics-for-900m/",
+        "title": "Mobileye acquires humanoid robot startup Mentee Robotics for $900M",
+        "link": "https://techcrunch.com/2026/01/06/mobileye-acquires-humanoid-robot-startup-mentee-robotics-for-900m/",
+        "published": "Tue, 06 Jan 2026 21:10:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Mentee Robotics was co-founded by Mobileye president Amnon Shashua."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/xai-says-it-raised-20b-in-series-e-funding/",
+        "title": "xAI says it raised $20B in Series E funding",
+        "link": "https://techcrunch.com/2026/01/06/xai-says-it-raised-20b-in-series-e-funding/",
+        "published": "Tue, 06 Jan 2026 20:57:16 +0000",
+        "source": "TechCrunch",
+        "summary": "Nvidia is among the many investors, but xAI has not disclosed if these investments come in the form of equity or debt."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/california-lawmaker-proposes-a-four-year-ban-on-ai-chatbots-in-kids-toys/",
+        "title": "California lawmaker proposes a four-year ban on AI chatbots in kids\u2019 toys",
+        "link": "https://techcrunch.com/2026/01/06/california-lawmaker-proposes-a-four-year-ban-on-ai-chatbots-in-kids-toys/",
+        "published": "Tue, 06 Jan 2026 20:22:21 +0000",
+        "source": "TechCrunch",
+        "summary": "\u201cOur children cannot be used as lab rats for Big Tech to experiment on,\u201d Senator Steve Padilla said. He just introduced a bill to ban AI chatbots in toys until safety regulations are developed."
+    },
+    {
+        "id": "https://www.theverge.com/tech/856503/ces-2026-robotaxi-ai-ev-car-concepts",
+        "title": "At CES, EVs take a backseat to robotaxis and AI",
+        "link": "https://www.theverge.com/tech/856503/ces-2026-robotaxi-ai-ev-car-concepts",
+        "published": "2026-01-06T15:30:00-05:00",
+        "source": "The Verge",
+        "summary": "It says a lot about the current moment when one of the world's largest EV sellers shows up at the world's biggest electronics show to announce not a new, more affordable model or a cool futuristic concept car, but a humanoid robot. And one we've seen already. Hyundai's decision to use its CES keynote to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/856883/ces-2026-wi-fi-8-asus-broadcom-mediatek",
+        "title": "Wi-Fi 8 is appearing at CES before most of us have switched to Wi-Fi 7",
+        "link": "https://www.theverge.com/tech/856883/ces-2026-wi-fi-8-asus-broadcom-mediatek",
+        "published": "2026-01-06T15:26:17-05:00",
+        "source": "The Verge",
+        "summary": "The first Wi-Fi 8 routers and chips made a surprise appearance at CES 2026, and could launch this year, only a couple of years after Wi-Fi 7 debuted. So, if you don't already have a Wi-Fi 7 router - and many of us don't - you might want to consider holding off on upgrading. Rather [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/transportation/856487/this-rv-will-charge-your-electric-truck-after-towing",
+        "title": "This RV will charge your electric truck after towing",
+        "link": "https://www.theverge.com/transportation/856487/this-rv-will-charge-your-electric-truck-after-towing",
+        "published": "2026-01-06T15:20:26-05:00",
+        "source": "The Verge",
+        "summary": "Electric trucks seem to have hit a pothole recently, ignored by truck owners who say they're worried about losing too much ranging from towing. But what if the thing your towing could also pump electrons back into your truck's battery when all's said and done? That what California-company Evotrex is proposing with its new RV, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/art-frame-tv-trends/",
+        "title": "The Inevitable Rise of the Art TV",
+        "link": "https://www.wired.com/story/art-frame-tv-trends/",
+        "published": "Tue, 06 Jan 2026 20:41:46 +0000",
+        "source": "WIRED",
+        "summary": "New televisions from Amazon, Hisense, TCL, and others are designed to display fine art and look like a painting when they\u2019re switched off. It\u2019s all thanks to smaller living spaces and new screen tech."
+    },
+    {
+        "id": "https://www.engadget.com/home/dreames-latest-robot-vacuum-concept-has-slightly-terrifying-legs-that-can-climb-full-size-stairs-210000399.html?src=rss",
+        "title": "Dreame's latest robot vacuum concept has slightly terrifying legs that can climb full-size stairs",
+        "link": "https://www.engadget.com/home/dreames-latest-robot-vacuum-concept-has-slightly-terrifying-legs-that-can-climb-full-size-stairs-210000399.html?src=rss",
+        "published": "Tue, 06 Jan 2026 21:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Robot vacuum companies are once again trying to outdo each other at CES 2026. This year, Chinese appliance maker Dreame is showing off a prototype of a device that can climb up and down an entire flight of stairs.</p><p>The concept, called the Cyber X, was previewed last year at IFA in Berlin. The vacuum sports a somewhat terrifying set of legs with rubber treads that allow it to autonomously navigate multi-story environments. While Dreame has previously shown off vacuums that can move up <a "
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/dreames-robot-vacuum-with-an-arm-is-back-at-ces-2026-and-it-can-do-more-than-pick-up-shoes-210000020.html?src=rss",
+        "title": "Dreame's robot vacuum with an arm is back at CES 2026 and it can do more than pick up shoes",
+        "link": "https://www.engadget.com/home/smart-home/dreames-robot-vacuum-with-an-arm-is-back-at-ces-2026-and-it-can-do-more-than-pick-up-shoes-210000020.html?src=rss",
+        "published": "Tue, 06 Jan 2026 21:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Last year at CES, Dreame showed off a robot vacuum prototype with a <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/more-than-one-company-brought-a-robot-vacuum-with-a-mechanical-arm-to-ces-2025-014056459.html\" target=\"_blank\">mechanical arm</a>. But while we were able to see the arm extend and retract, we didn\u2019t see the device, which was described as a prototype at the time, actually grab anything, which was a bit disappointing.</p><p>This year, though, the company has made it"
+    },
+    {
+        "id": "https://layandreas.github.io/personal-blog/posts/how-spotify-made-me-self-host/",
+        "title": "How Spotify Made Me Self Host",
+        "link": "https://layandreas.github.io/personal-blog/posts/how-spotify-made-me-self-host/",
+        "published": "Tue, 06 Jan 2026 19:50:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46517636\">Comments</a>"
+    },
+    {
+        "id": "https://arxiv.org/abs/2512.04859",
+        "title": "High-Performance DBMSs with io_uring: When and How to use it",
+        "link": "https://arxiv.org/abs/2512.04859",
+        "published": "Tue, 06 Jan 2026 19:29:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46517319\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/microsoft-office-not-renamed-microsoft-365-copilot-confusion/",
+        "title": "No, Microsoft Office was not renamed Microsoft 365 Copilot - here's why you're confused",
+        "link": "https://www.zdnet.com/article/microsoft-office-not-renamed-microsoft-365-copilot-confusion/",
+        "published": "Tue, 06 Jan 2026 21:09:49 GMT",
+        "source": "Latest news",
+        "summary": "With Microsoft's bewildering naming conventions, the mistake is easy to make. But Office is still Office, at least when it's not Microsoft 365."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-mobile-accessories-ces-2026/",
+        "title": "6 mobile accessories I found most exciting at CES 2026",
+        "link": "https://www.zdnet.com/article/most-exciting-mobile-accessories-ces-2026/",
+        "published": "Tue, 06 Jan 2026 20:48:49 GMT",
+        "source": "Latest news",
+        "summary": "CES is great for innovative tech, but don't forget gadgets and gizmos. These are my favorite mobile accessories right now."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper-tablet-remarkable-alternative-actual-color/",
+        "title": "I tested TCL's Note A1 at CES, and it's a ReMarkable alternative with full color",
+        "link": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper-tablet-remarkable-alternative-actual-color/",
+        "published": "Tue, 06 Jan 2026 20:47:17 GMT",
+        "source": "Latest news",
+        "summary": "I went hands-on with TCL's Note A1 Nxtpaper tablet at CES, and the matte color display makes digital paper feel less like a compromise."
     }
 ]
