📚 Auto-update: News data refreshed - 2026-01-06 22:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43246,5 +43246,101 @@
         "published": "Tue, 06 Jan 2026 20:47:17 GMT",
         "source": "Latest news",
         "summary": "I went hands-on with TCL's Note A1 Nxtpaper tablet at CES, and the matte color display makes digital paper feel less like a compromise."
+    },
+    {
+        "id": "https://www.theverge.com/21539047/best-amazon-kindle-deals",
+        "title": "Here are the best Kindle deals right now",
+        "link": "https://www.theverge.com/21539047/best-amazon-kindle-deals",
+        "published": "2026-01-06T16:26:41-05:00",
+        "source": "The Verge",
+        "summary": "When it comes to finding a device to read ebooks, you have a few options to choose from. You can always buy a tablet or use your phone, but those devices are multipurpose and can be used for a ton of things, like surfing the web or doomscrolling on X or Bluesky. If you are [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/856948/nick-shirley-minnesota-daycare-fraud-influencer-media-cycle",
+        "title": "Influencer content is fuel for an internet-obsessed administration",
+        "link": "https://www.theverge.com/tech/856948/nick-shirley-minnesota-daycare-fraud-influencer-media-cycle",
+        "published": "2026-01-06T16:24:59-05:00",
+        "source": "The Verge",
+        "summary": "Just a day after publishing a 40-minute video alleging fraud at Minnesota daycare centers, Nick Shirley had the vice president's attention. In Shirley's video, he and another man identified only as \"David\" roam Minneapolis with cameras and microphones, demanding entrance to daycare centers they say are operated by members of the local Somali community. With [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/letting-prisons-jam-contraband-phones-is-a-bad-idea-phone-companies-tell-fcc/",
+        "title": "Letting prisons jam contraband phones is a bad idea, phone companies tell FCC",
+        "link": "https://arstechnica.com/tech-policy/2026/01/letting-prisons-jam-contraband-phones-is-a-bad-idea-phone-companies-tell-fcc/",
+        "published": "Tue, 06 Jan 2026 21:11:54 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"Jamming will block all communications,\" including 911 calls, CTIA tells FCC."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2026/01/dells-xps-revival-is-a-welcome-reprieve-from-the-ai-pc-fad/",
+        "title": "Dell\u2019s XPS revival is a welcome reprieve from the \u201cAI PC\u201d fad",
+        "link": "https://arstechnica.com/gadgets/2026/01/dells-xps-revival-is-a-welcome-reprieve-from-the-ai-pc-fad/",
+        "published": "Tue, 06 Jan 2026 19:55:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Dell moves from pushing \"AI PCs\" and back to what matters in laptops."
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1128655/powering-up-and-saving-the-planet/",
+        "title": "Powering up (and saving) the planet",
+        "link": "https://www.technologyreview.com/2026/01/06/1128655/powering-up-and-saving-the-planet/",
+        "published": "Tue, 06 Jan 2026 22:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Water shortages in Southern California made an indelible impression on Evelyn Wang \u201900 when she was growing up in Los Angeles. \u201cI was quite young, perhaps in first grade,\u201d she says. \u201cBut I remember we weren\u2019t allowed to turn our sprinklers on. And everyone in the neighborhood was given disinfectant tablets for the toilet and&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1128661/starstruck/",
+        "title": "Starstruck",
+        "link": "https://www.technologyreview.com/2026/01/06/1128661/starstruck/",
+        "published": "Tue, 06 Jan 2026 22:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Few people, if any, contemplate stars\u2014celestial or cinematic\u2014the way Aomawa Shields does.&#160; An astronomer and astrobiologist, Shields explores the potential habitability of planets beyond our solar system. But she is also a classically trained actor\u2014and that\u2019s helped shape her professional trajectory in unexpected ways.&#160; Today, Shields is an associate professor in the Department of Physics&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1128665/dennis-whytes-fusion-quest/",
+        "title": "Dennis Whyte\u2019s fusion quest",
+        "link": "https://www.technologyreview.com/2026/01/06/1128665/dennis-whytes-fusion-quest/",
+        "published": "Tue, 06 Jan 2026 22:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Ever since nuclear fusion was discovered in the 1930s, scientists have wondered if we could somehow replicate and harness the phenomenon behind starlight\u2014the smashing together of hydrogen atoms to form helium and a stupendous amount of clean energy. Fusing hydrogen would yield 200 million times more energy than simply burning it. Unlike nuclear fission, which&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1128990/hands-on-engineering/",
+        "title": "Hands-on engineering",
+        "link": "https://www.technologyreview.com/2026/01/06/1128990/hands-on-engineering/",
+        "published": "Tue, 06 Jan 2026 22:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Jaden Chizuruoke May \u201929 worked with teammates Rihanna Arouna \u201929 and Marian Akinsoji \u201929 to design the chemically powered model car whose framework he is building in this scene from the Huang-Hobbs BioMaker Space, where students have a chance to work safely and independently with biological systems. The assignment to build the car\u2014and the layered&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1128993/investing-in-the-promise-of-quantum/",
+        "title": "Investing in the promise of quantum",
+        "link": "https://www.technologyreview.com/2026/01/06/1128993/investing-in-the-promise-of-quantum/",
+        "published": "Tue, 06 Jan 2026 22:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "As MIT navigates a difficult and constantly changing higher education landscape, I believe our best response is not easy but simple: Keep doing our very best work. The presidential initiatives we\u2019ve launched since fall 2024 are a vital part of our strategy to advance excellence within and across high-impact fields, from health care, climate, and&#8230;"
+    },
+    {
+        "id": "https://blog.booleanbiotech.com/oral-microbiome-biogaia",
+        "title": "Oral microbiome sequencing after taking probiotics",
+        "link": "https://blog.booleanbiotech.com/oral-microbiome-biogaia",
+        "published": "Tue, 06 Jan 2026 21:10:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46518804\">Comments</a>"
+    },
+    {
+        "id": "https://phrack.org/issues/71/17",
+        "title": "Calling All Hackers: How money works (2024)",
+        "link": "https://phrack.org/issues/71/17",
+        "published": "Tue, 06 Jan 2026 20:24:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46518129\">Comments</a>"
+    },
+    {
+        "id": "https://arxiv.org/abs/2512.09882",
+        "title": "Comparing AI agents to cybersecurity professionals in real-world pen testing",
+        "link": "https://arxiv.org/abs/2512.09882",
+        "published": "Tue, 06 Jan 2026 21:23:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46518996\">Comments</a>"
     }
 ]
