📚 Auto-update: News data refreshed - 2026-01-06 23:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -43342,5 +43342,77 @@
         "published": "Tue, 06 Jan 2026 21:23:07 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46518996\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "title": "CES 2026: Everything revealed, from Nvidia\u2019s debuts to AMD\u2019s new chips to Razer\u2019s AI oddities",
+        "link": "https://techcrunch.com/2026/01/06/ces-2026-everything-revealed-from-nvidias-debuts-to-amds-new-chips-to-razers-ai-oddities/",
+        "published": "Tue, 06 Jan 2026 22:47:48 +0000",
+        "source": "TechCrunch",
+        "summary": "CES 2026&#160;is in full swing in Las Vegas, with the show floor open to the public after a packed couple of days&#160;occupied by&#160;press conferences from the likes of Nvidia, Sony, and AMD&#160;and previews from Sunday\u2019s Unveiled event.&#160; As has been the case for the past two years at CES, AI is at the forefront of [&#8230;]"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/wearable-health-devices-could-generate-a-million-tons-of-e-waste-by-2050/",
+        "title": "Wearable health devices could generate a million tons of e-waste by 2050",
+        "link": "https://techcrunch.com/2026/01/06/wearable-health-devices-could-generate-a-million-tons-of-e-waste-by-2050/",
+        "published": "Tue, 06 Jan 2026 22:34:40 +0000",
+        "source": "TechCrunch",
+        "summary": "The most surprising part is that the plastic isn't the biggest problem."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/a-viral-reddit-post-alleging-fraud-from-a-food-delivery-app-turned-out-to-be-ai-generated/",
+        "title": "A viral Reddit post alleging fraud from a food delivery app turned out to be AI-generated",
+        "link": "https://techcrunch.com/2026/01/06/a-viral-reddit-post-alleging-fraud-from-a-food-delivery-app-turned-out-to-be-ai-generated/",
+        "published": "Tue, 06 Jan 2026 22:23:39 +0000",
+        "source": "TechCrunch",
+        "summary": "When fake content goes viral, the damage has already been done, even if the post is debunked."
+    },
+    {
+        "id": "https://www.theverge.com/policy/856815/jake-sullivan-interview-ai-chips-nvidia-trump",
+        "title": "Jake Sullivan is furious that Trump destroyed his AI foreign policy",
+        "link": "https://www.theverge.com/policy/856815/jake-sullivan-interview-ai-chips-nvidia-trump",
+        "published": "2026-01-06T17:46:00-05:00",
+        "source": "The Verge",
+        "summary": "Hello and welcome to Regulator, a newsletter for Verge subscribers about Big Tech, Big Government, and the big paradigm shifts that result from their collision. Not a subscriber yet? It's a new year, so why not treat yourself? In 2022, Jake Sullivan, then national security adviser under President Joe Biden and a powerful figure in [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/grok-is-pushing-ai-undressing-mainstream/",
+        "title": "Grok Is Pushing AI \u2018Undressing\u2019 Mainstream",
+        "link": "https://www.wired.com/story/grok-is-pushing-ai-undressing-mainstream/",
+        "published": "Tue, 06 Jan 2026 22:20:08 +0000",
+        "source": "WIRED",
+        "summary": "Paid tools that \u201cstrip\u201d clothes from photos have been available on the darker corners of the internet for years. Elon Musk\u2019s X is now removing barriers to entry\u2014and making the results public."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/quake-is-now-steam-deck-verified-223009852.html?src=rss",
+        "title": "Quake is now Steam Deck Verified",
+        "link": "https://www.engadget.com/gaming/quake-is-now-steam-deck-verified-223009852.html?src=rss",
+        "published": "Tue, 06 Jan 2026 22:30:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Bethesda <a class=\"link\" href=\"https://x.com/bethesda/status/2008653921267392746\" target=\"_blank\">announced</a> on X today that <em>Quake</em> is now a Steam Deck Verified title. The 1996 game from the legendary id Software has also been designated Handheld Optimized for the Xbox ROG Ally devices. As one of the OG boomer shooters, <em>Quake</em> still commands a sizable and passionate fan base, and it's now available on just about every gaming platform imaginable.&nbsp;</p><p>Since rolling ou"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/hyperkin-and-gamesir-x5-alteron-modular-game-controller-ces-2026-221853624.html?src=rss",
+        "title": "CES 2026: Hyperkin and Gamesir made a modular game controller for your smartphone, tablet and even your Switch",
+        "link": "https://www.engadget.com/gaming/hyperkin-and-gamesir-x5-alteron-modular-game-controller-ces-2026-221853624.html?src=rss",
+        "published": "Tue, 06 Jan 2026 22:18:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I\u2019ve been using the same smartphone controller on my iPhone for years. That\u2019s partly because most options are so similar. Announced at CES 2026, the X5 Alteron couldn\u2019t be more different. It\u2019s a collaboration between GameSir (which loves unusual peripheral <a href=\"https://gamesir.com/products/gamesir-tarantula-pro\"><ins>dalliances</ins></a>) and Hyperkin (retro-leaning <a href=\"https://www.engadget.com/hyperkin-xenon-controller-announced-191629821.html\"><ins>controller maker</ins></a>).</p>\n"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/intels-core-ultra-series-3-let-me-play-battlefield-6-at-190-fps-on-a-lenovo-ultraportable-220952246.html?src=rss",
+        "title": "Intel's Core Ultra Series 3 let me play 'Battlefield 6' at 190 fps on a Lenovo ultraportable",
+        "link": "https://www.engadget.com/gaming/intels-core-ultra-series-3-let-me-play-battlefield-6-at-190-fps-on-a-lenovo-ultraportable-220952246.html?src=rss",
+        "published": "Tue, 06 Jan 2026 22:09:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>How far has Intel's embedded Arc&nbsp;graphics come over the years? Enough to let me play <em>Battlefield </em>6 at up to 190 fps in 1080p, with the graphics settings set to high, all on an unassuming Lenovo IdeaPad Pro 5. There was no need for dedicated graphics, just the <a class=\"link\" href=\"https://www.engadget.com/computing/ces-2026-intel-hopes-its-core-ultra-series-3-chips-are-the-start-of-a-comeback-000155611.html\" target=\"_blank\">Intel Core Ultra X9 388H's</a> built-in Arc B390 GPU. <"
+    },
+    {
+        "id": "https://chipsandcheese.com/p/ces-2026-taking-the-lids-off-amds",
+        "title": "CES 2026: Taking the Lids Off AMD's Venice and MI400 SoCs",
+        "link": "https://chipsandcheese.com/p/ces-2026-taking-the-lids-off-amds",
+        "published": "Tue, 06 Jan 2026 21:46:04 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46519326\">Comments</a>"
     }
 ]
